# blog-v2

./: .gitignore  README.md  docker-compose.yml
admin-frontend/: index.html  package-lock.json  package.json  vite.config.ts
admin-frontend/src/: App.vue  echarts.ts  main.ts  style.css
admin-frontend/src/api/: audit.ts  auth.ts  client.ts  comments.ts  data.ts  dict.ts  posts.ts  stats.ts  tags.ts  users.ts
admin-frontend/src/components/: AdminNavMenu.vue  MobileRowCard.vue  RowDetailDrawer.vue
admin-frontend/src/composables/: useBreakpoint.ts  useTheme.ts
admin-frontend/src/i18n/: index.ts
admin-frontend/src/layouts/: ConsoleLayout.vue
admin-frontend/src/router/: index.ts
admin-frontend/src/stores/: auth.ts  dict.ts
admin-frontend/src/types/: index.ts
admin-frontend/src/views/: AuditView.vue  DashboardView.vue  DictManageView.vue  LoginView.vue  UsersView.vue
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_audit_log.sql  0003_dictionary.sql  0004_seed_more_audit_actions.sql  0005_post_views.sql  0006_post_reading_metrics.sql  0007_post_preview_token.sql  0008_seed_demo_data.sql  0008_trgm_search.sql  0009_post_cover_image.sql  0010_missing_indexes.sql
backend/src/: audit.rs  config.rs  error.rs  main.rs  markdown.rs  notify.rs  rate_limit.rs  routes.rs  state.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/handlers/: admin_audit.rs  admin_comments.rs  admin_data.rs  admin_dict.rs  admin_posts.rs  admin_stats.rs  admin_tags.rs  admin_users.rs  auth.rs  comments.rs  dict.rs  feed.rs  mod.rs  posts.rs  search.rs  tags.rs  uploads.rs
backend/src/models/: comment.rs  dict.rs  mod.rs  post.rs  tag.rs  user.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts  comments.ts  posts.ts  tags.ts
frontend/src/components/: BackButton.vue  CommentForm.vue  CommentList.vue  CommentNode.vue  HomeHero.vue  PostCard.vue  PostContent.vue
frontend/src/composables/: useBreakpoint.ts  useHead.ts  useTheme.ts
frontend/src/i18n/: index.ts
frontend/src/layouts/: PublicLayout.vue
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: uploadUrl.ts
frontend/src/views/: ArchiveView.vue  HomeView.vue  PostView.vue  (+2 more)
(+12 files in other folders)
