[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"
default-run = "blog-backend"

[[bin]]
name = "blog-backend"
path = "src/main.rs"

[[bin]]
name = "seed_admin"
path = "src/bin/seed_admin.rs"

[[bin]]
name = "seed_posts"
path = "src/bin/seed_posts.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9"
comrak = "0.29"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
anyhow = "1"
time = { version = "0.3", features = ["serde", "macros"] }
dotenvy = "0.15"
slug = "0.1"
rpassword = "7"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
webp = "0.3"
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "builder",
] }
